src/index.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {
    .titleHead {
        @apply text-blue-950 font-bold
    }
    .navContainer{
        @apply sticky top-0 z-50 py-2 lg:py-0 shadow-lg flex lg:gap-20 flex-col justify-between lg:items-center lg:flex-row
    }
    .containerWidth {
        @apply w-full max-w-full mx-auto lg:max-w-7xl lg:w-10/12 px-2 lg:px-0
    }

    .inputs {
        @apply p-1 w-full outline-0 rounded-sm focus:outline-1 focus:outline focus:outline-slate-300
    }

    .offerFlex {
        @apply flex items-center gap-2
    }

    .likeButton {
        @apply text-white p-2 mt-3 hover:opacity-50 smoothTransition
    }

    .orangeButtons {
        @apply block mx-auto bg-orange-600 p-2 my-4 shadow-lg shadow-orange-500 text-white rounded-lg font-medium lg:mx-0 w-28
    }
    .gradient{
        @apply bg-gradient-to-r from-orange-50 from-5% via-neutral-100 to-neutral-50
    }
    .smoothTransition{
    @apply duration-500 transition
    }
    .hoverState {
        @apply hover:scale-110 smoothTransition
    }

    .list-elements {
        @apply pt-4 smoothTransition ease-in hover:underline
    }

    .modal-inputs {
        @apply bg-white col-span-2 p-1
    }
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    list-style: none;
}

html {
    scroll-behavior: smooth;
}

body {
    font-family: 'Roboto', sans-serif;
}

.animation {
    animation: animate 1500ms linear infinite;
}

@keyframes animate {
    0% {
        transform: scale(0.9);
    }

    100% {
        transform: scale(1.1);
    }
}

.navLink::before {
    content: '';
    position: absolute;
    top: 1.2rem;
    left: 0;
    right: 0;
    width: 0%;
    height: 3px;
    background-color: #ea580c;
    transition: 250ms ease-in;
}

.navLink:hover::before {
    width: 100%;
}
 
.active-btn {
     box-shadow: 0px 3px #ea580c;
 }

.overlay {
    background-color: rgba(0, 0, 0, 0.5);
    backdrop-filter: blur(4px);
    z-index: 100;
    transition: all 0.5s;
}
 

